--- a/layouts/partials/header/header.scss
+++ b/layouts/partials/header/header.scss
@@ -39,7 +39,7 @@
         position: sticky;
         top: var(--spacing-y);
         left: var(--spacing-x);
-        display: inline-flex;
+        display: flex;
         width: 100%;
         margin-bottom: calc(var(--spacing-y) * 5);
         padding: 0 var(--spacing-x);
